# Fruit-Classifier-Revisi-RTC-Kelompok-14

./: README.md
qt_frontend/: CMakeLists.txt  Makefile  qt_frontend.pro
qt_frontend/include/: mainwindow.h  plotwidget.h
qt_frontend/src/: main.cpp  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h
qt_frontend/ui/: mainwindow.ui
rust_backend/: Cargo.toml
rust_backend/dataset/: fruits_dataset.csv
rust_backend/src/: data.rs  lib.rs  main.rs  model.rs  training.rs  utils.rs
